fix pinned discussion spacing

--- a/components/item.module.css
+++ b/components/item.module.css
@@ -40,7 +40,7 @@ a.title:visited {
 .pin {
     fill: #a5a5a5;
     margin-right: .4rem;
-    margin-left: -.1rem;
+    margin-left: -.2rem;
 }
 
 .dontLike {
